# uncertain_blackholemass

./: .gitignore  LICENSE  README.md  get_data.py  requirement.txt  run_featureextractor.py  run_uqregresor.py  setup.cfg
config/: config.yaml  config_getdata.yaml
lib/: dataset_sdssquasarspec.py  get_config.py  plot_utils.py
models/: encoder.py  nnmodel.py
notebooks/: conformalregressor.ipynb  featureextraction.ipynb  inspect_data.ipynb  uncertaintyquantification.ipynb
uncertain_blackholemass/: get_data.py  run_featureextractor.py
uncertain_blackholemass/config/: config.yaml  config_getdata.yaml  config_runuqregressor.yaml  hydra_nolog.yaml
uncertain_blackholemass/lib/: dataset_sdssquasarspec.py  plot_utils.py
uncertain_blackholemass/notebooks/: featureextraction.ipynb  inspectdata.ipynb  uncertaintyquantification.ipynb
uncertain_blackholemass/reproducible_output/logs/20230422/002629_LOGMBH_HB_DenseEncoder/: estimator_optim.pkl  estimatorq_optim.pkl  features.pkl  loss.pkl  mapieuq_mpiw_alpha.pkl  mapieuq_picp_alpha.pkl  mapieuq_pred.pkl  model.pth  yscaler.pkl
uncertain_blackholemass/reproducible_output/logs/20230422/002629_LOGMBH_HB_DenseEncoder/.hydra/: config.yaml  hydra.yaml
uncertain_blackholemass/reproducible_output/logs/20230422/030635_LOGMBH_MGII_DenseEncoder/: datasplitidx.pkl  estimator_optim.pkl  estimatorq_optim.pkl  features.pkl  loss.pkl  mapieuq_mpiw_alpha.pkl  mapieuq_picp_alpha.pkl  mapieuq_pred.pkl  model.pth  yscaler.pkl
uncertain_blackholemass/reproducible_output/logs/20230422/030635_LOGMBH_MGII_DenseEncoder/.hydra/: config.yaml  (+1 more)
