[metadata]
name = uncertain_blackholemass
version = 0.1.0
author = Suk Yee Yong
author_email = sukyee.yong@mq.edu.au
url = https://github.com/yongsukyee/uncertain_blackholemass
description = Uncertainty quantification of black hole mass estimation
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = prediction pytorch neural-networks quasar uncertainty-quantification black-hole conformal-prediction prediction-intervals agn
license = MIT license
classifiers =
    Framework :: Jupyter :: JupyterLab :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires = file: requirement.txt

[options.package_data]
* = README.md
